checked token material product and avatar  for firebase storage + UX productCheet
