# api/routes/auth.routes.js
@@ -6,6 +6,8 @@ import { verifyEmail } from "../controllers/authentication/verifyEmail.controlle
 import { resetPassword } from "../controllers/authentication/resetPassword.controller.js";
 import authenticateJWT from "../controllers/authentication/authenticateJWT.js";
 import verifyToken from "../controllers/authentication/verifyToken.controller.js";
+import authenticateAdmin from "../controllers/authentication/authenticateAdmin.js";
+import authenticateUser from "../controllers/authentication/authenticateUser.js";
 const router = express.Router();
 
 router.post("/register", register);
@@ -13,6 +15,17 @@ router.post("/verify-email", verifyEmail);
 router.post("/login", login);
 router.post("/request-password-reset", requestPasswordReset);
 router.post("/reset-password", resetPassword);
-router.get("/verify-token", authenticateJWT, verifyToken);
+router.get(
+  "/verify-token/client",
+  authenticateJWT,
+  authenticateUser,
+  verifyToken
+);
+router.get(
+  "/verify-token/admin",
+  authenticateJWT,
+  authenticateAdmin,
+  verifyToken
+);
 
 export default router;
